successful webapp start with kafka servers