@@ -5,6 +5,8 @@ import com.kiwiko.webapp.mvc.lifecycle.api.LifeCycleHookRegistry;
 import com.kiwiko.webapp.mvc.lifecycle.api.ShutdownHook;
 import com.kiwiko.webapp.mvc.lifecycle.api.StartupHook;
 import com.kiwiko.webapp.streaming.pushservice.internal.impl.websockets.spring.subscribers.setup.SubscribePushServicesCreator;
+import com.kiwiko.webapp.system.kafka.server.internal.KafkaServerShutdownHook;
+import com.kiwiko.webapp.system.kafka.server.internal.KafkaServerStartupHook;
 
 import javax.inject.Inject;
 import java.util.Collections;
@@ -13,6 +15,8 @@ import java.util.Set;
 public class DependencyLifecycleHookRegistry implements LifeCycleHookRegistry {
 
     @Inject private SubscribePushServicesCreator subscribePushServicesCreator;
+    @Inject private KafkaServerStartupHook kafkaServerStartupHook;
+    @Inject private KafkaServerShutdownHook kafkaServerShutdownHook;
 
     @Override
     public void register(LifeCycleHook hook) {
@@ -21,12 +25,12 @@ public class DependencyLifecycleHookRegistry implements LifeCycleHookRegistry {
 
     @Override
     public Set<StartupHook> getStartupHooks() {
-        return Set.of(subscribePushServicesCreator);
+        return Set.of(subscribePushServicesCreator, kafkaServerStartupHook);
     }
 
     @Override
     public Set<ShutdownHook> getShutdownHooks() {
-        return Collections.emptySet();
+        return Set.of(kafkaServerShutdownHook);
     }
 
     @Override
